fix: Remove pagination => does not work on mobile

--- a/src/sections/projects/projects.module.sass
+++ b/src/sections/projects/projects.module.sass
@@ -11,13 +11,6 @@
   +tablet
     min-height: 700px
 
-  .pagination
-    margin-top: scale(1)
-    bottom: 0
-    text-align: center
-    +tablet
-      display: none
-
 .navigationContainer
   display: flex
   justify-content: space-between
